--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "4   4   1.70    Premium     G     VS2   62.6   59.0  7.65  7.61  4.77  14453"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "4   1.70    Premium     G     VS2   62.6   59.0  7.65  7.61  4.77  14453"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "freq     92454   44391   53272"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,16 +483,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'PremiumVery GoodIdealGoodFair'"
+       "array(['Premium', 'Very Good', 'Ideal', 'Good', 'Fair'], dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,14 +586,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\athul\\AppData\\Local\\Temp\\ipykernel_27588\\4266736346.py:7: UserWarning: \n",
+      "C:\\Users\\athul\\AppData\\Local\\Temp\\ipykernel_22300\\4266736346.py:7: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -628,7 +628,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\athul\\AppData\\Local\\Temp\\ipykernel_27588\\4266736346.py:7: UserWarning: \n",
+      "C:\\Users\\athul\\AppData\\Local\\Temp\\ipykernel_22300\\4266736346.py:7: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -663,7 +663,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\athul\\AppData\\Local\\Temp\\ipykernel_27588\\4266736346.py:7: UserWarning: \n",
+      "C:\\Users\\athul\\AppData\\Local\\Temp\\ipykernel_22300\\4266736346.py:7: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -698,7 +698,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\athul\\AppData\\Local\\Temp\\ipykernel_27588\\4266736346.py:7: UserWarning: \n",
+      "C:\\Users\\athul\\AppData\\Local\\Temp\\ipykernel_22300\\4266736346.py:7: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -733,7 +733,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\athul\\AppData\\Local\\Temp\\ipykernel_27588\\4266736346.py:7: UserWarning: \n",
+      "C:\\Users\\athul\\AppData\\Local\\Temp\\ipykernel_22300\\4266736346.py:7: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -768,7 +768,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\athul\\AppData\\Local\\Temp\\ipykernel_27588\\4266736346.py:7: UserWarning: \n",
+      "C:\\Users\\athul\\AppData\\Local\\Temp\\ipykernel_22300\\4266736346.py:7: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -803,7 +803,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\athul\\AppData\\Local\\Temp\\ipykernel_27588\\4266736346.py:7: UserWarning: \n",
+      "C:\\Users\\athul\\AppData\\Local\\Temp\\ipykernel_22300\\4266736346.py:7: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -879,193 +879,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>carat</th>\n",
-       "      <th>cut</th>\n",
-       "      <th>color</th>\n",
-       "      <th>clarity</th>\n",
-       "      <th>depth</th>\n",
-       "      <th>table</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.52</td>\n",
-       "      <td>Premium</td>\n",
-       "      <td>F</td>\n",
-       "      <td>VS2</td>\n",
-       "      <td>62.2</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>13619</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.03</td>\n",
-       "      <td>Very Good</td>\n",
-       "      <td>J</td>\n",
-       "      <td>SI2</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>13387</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.70</td>\n",
-       "      <td>Ideal</td>\n",
-       "      <td>G</td>\n",
-       "      <td>VS1</td>\n",
-       "      <td>61.2</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>2772</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.32</td>\n",
-       "      <td>Ideal</td>\n",
-       "      <td>G</td>\n",
-       "      <td>VS1</td>\n",
-       "      <td>61.6</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>666</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.70</td>\n",
-       "      <td>Premium</td>\n",
-       "      <td>G</td>\n",
-       "      <td>VS2</td>\n",
-       "      <td>62.6</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>14453</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193568</th>\n",
-       "      <td>0.31</td>\n",
-       "      <td>Ideal</td>\n",
-       "      <td>D</td>\n",
-       "      <td>VVS2</td>\n",
-       "      <td>61.1</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>1130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193569</th>\n",
-       "      <td>0.70</td>\n",
-       "      <td>Premium</td>\n",
-       "      <td>G</td>\n",
-       "      <td>VVS2</td>\n",
-       "      <td>60.3</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>2874</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193570</th>\n",
-       "      <td>0.73</td>\n",
-       "      <td>Very Good</td>\n",
-       "      <td>F</td>\n",
-       "      <td>SI1</td>\n",
-       "      <td>63.1</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>3036</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193571</th>\n",
-       "      <td>0.34</td>\n",
-       "      <td>Very Good</td>\n",
-       "      <td>D</td>\n",
-       "      <td>SI1</td>\n",
-       "      <td>62.9</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>681</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193572</th>\n",
-       "      <td>0.71</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>E</td>\n",
-       "      <td>SI2</td>\n",
-       "      <td>60.8</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>2258</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>193573 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        carat        cut color clarity  depth  table  price\n",
-       "0        1.52    Premium     F     VS2   62.2   58.0  13619\n",
-       "1        2.03  Very Good     J     SI2   62.0   58.0  13387\n",
-       "2        0.70      Ideal     G     VS1   61.2   57.0   2772\n",
-       "3        0.32      Ideal     G     VS1   61.6   56.0    666\n",
-       "4        1.70    Premium     G     VS2   62.6   59.0  14453\n",
-       "...       ...        ...   ...     ...    ...    ...    ...\n",
-       "193568   0.31      Ideal     D    VVS2   61.1   56.0   1130\n",
-       "193569   0.70    Premium     G    VVS2   60.3   58.0   2874\n",
-       "193570   0.73  Very Good     F     SI1   63.1   57.0   3036\n",
-       "193571   0.34  Very Good     D     SI1   62.9   55.0    681\n",
-       "193572   0.71       Good     E     SI2   60.8   64.0   2258\n",
-       "\n",
-       "[193573 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#df.drop(labels=[\"x\",\"y\",\"z\"],axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x13739062130>"
+       "<seaborn.axisgrid.PairGrid at 0x23d82960790>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1086,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +927,7 @@
        "array(['Premium', 'Very Good', 'Ideal', 'Good', 'Fair'], dtype=object)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +957,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +986,7 @@
        "array(['F', 'J', 'G', 'E', 'D', 'H', 'I'], dtype=object)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1186,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1220,7 @@
        "[193573 rows x 10 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1346,7 @@
        "4   1.70    4      4        4   62.6   59.0  7.65  7.61  4.77  14453"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
