--- a/notebooks/Model Training.ipynb
+++ b/notebooks/Model Training.ipynb
@@ -261,12 +261,320 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Train Test Split\n"
+    "## Train Test Split\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.30,random_state=42)\n",
+    "\n",
+    "X_train=pd.DataFrame(preprocessor.fit_transform(X_train),columns=preprocessor.get_feature_names_out())\n",
+    "X_test=pd.DataFrame(preprocessor.transform(X_test),columns=preprocessor.get_feature_names_out())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_pipeline__carat</th>\n",
+       "      <th>num_pipeline__depth</th>\n",
+       "      <th>num_pipeline__table</th>\n",
+       "      <th>num_pipeline__x</th>\n",
+       "      <th>num_pipeline__y</th>\n",
+       "      <th>num_pipeline__z</th>\n",
+       "      <th>cat_pipeline__cut</th>\n",
+       "      <th>cat_pipeline__color</th>\n",
+       "      <th>cat_pipeline__clarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.823144</td>\n",
+       "      <td>-1.129988</td>\n",
+       "      <td>-0.641897</td>\n",
+       "      <td>-0.780451</td>\n",
+       "      <td>-0.835103</td>\n",
+       "      <td>-0.876024</td>\n",
+       "      <td>0.874100</td>\n",
+       "      <td>-0.936747</td>\n",
+       "      <td>1.350746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.945023</td>\n",
+       "      <td>-1.777823</td>\n",
+       "      <td>0.921902</td>\n",
+       "      <td>1.073226</td>\n",
+       "      <td>1.166389</td>\n",
+       "      <td>0.946633</td>\n",
+       "      <td>-1.137644</td>\n",
+       "      <td>0.910853</td>\n",
+       "      <td>0.684455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.958484</td>\n",
+       "      <td>0.165682</td>\n",
+       "      <td>0.400636</td>\n",
+       "      <td>1.703116</td>\n",
+       "      <td>1.755063</td>\n",
+       "      <td>1.742237</td>\n",
+       "      <td>-0.131772</td>\n",
+       "      <td>0.910853</td>\n",
+       "      <td>0.018164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.995648</td>\n",
+       "      <td>-0.574701</td>\n",
+       "      <td>-0.641897</td>\n",
+       "      <td>-1.122391</td>\n",
+       "      <td>-1.161138</td>\n",
+       "      <td>-1.165334</td>\n",
+       "      <td>0.874100</td>\n",
+       "      <td>-0.320880</td>\n",
+       "      <td>2.017037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.995648</td>\n",
+       "      <td>0.258230</td>\n",
+       "      <td>0.400636</td>\n",
+       "      <td>-1.176382</td>\n",
+       "      <td>-1.152082</td>\n",
+       "      <td>-1.136403</td>\n",
+       "      <td>-1.137644</td>\n",
+       "      <td>1.526720</td>\n",
+       "      <td>-0.648127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135496</th>\n",
+       "      <td>-0.629077</td>\n",
+       "      <td>-1.500179</td>\n",
+       "      <td>1.964434</td>\n",
+       "      <td>-0.546492</td>\n",
+       "      <td>-0.518125</td>\n",
+       "      <td>-0.644575</td>\n",
+       "      <td>-1.137644</td>\n",
+       "      <td>-0.936747</td>\n",
+       "      <td>-0.648127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135497</th>\n",
+       "      <td>2.411307</td>\n",
+       "      <td>0.443325</td>\n",
+       "      <td>2.485700</td>\n",
+       "      <td>1.919078</td>\n",
+       "      <td>1.872797</td>\n",
+       "      <td>1.930288</td>\n",
+       "      <td>-1.137644</td>\n",
+       "      <td>-0.320880</td>\n",
+       "      <td>-0.648127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135498</th>\n",
+       "      <td>0.923460</td>\n",
+       "      <td>0.906065</td>\n",
+       "      <td>0.400636</td>\n",
+       "      <td>0.992240</td>\n",
+       "      <td>0.921862</td>\n",
+       "      <td>1.047891</td>\n",
+       "      <td>-0.131772</td>\n",
+       "      <td>0.294987</td>\n",
+       "      <td>0.018164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135499</th>\n",
+       "      <td>-1.038774</td>\n",
+       "      <td>-0.667249</td>\n",
+       "      <td>-0.641897</td>\n",
+       "      <td>-1.212375</td>\n",
+       "      <td>-1.197364</td>\n",
+       "      <td>-1.252127</td>\n",
+       "      <td>-1.137644</td>\n",
+       "      <td>0.294987</td>\n",
+       "      <td>2.017037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135500</th>\n",
+       "      <td>-1.038774</td>\n",
+       "      <td>-0.019414</td>\n",
+       "      <td>0.921902</td>\n",
+       "      <td>-1.239371</td>\n",
+       "      <td>-1.215477</td>\n",
+       "      <td>-1.208731</td>\n",
+       "      <td>-1.137644</td>\n",
+       "      <td>0.294987</td>\n",
+       "      <td>-1.314417</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>135501 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        num_pipeline__carat  num_pipeline__depth  num_pipeline__table  \\\n",
+       "0                 -0.823144            -1.129988            -0.641897   \n",
+       "1                  0.945023            -1.777823             0.921902   \n",
+       "2                  1.958484             0.165682             0.400636   \n",
+       "3                 -0.995648            -0.574701            -0.641897   \n",
+       "4                 -0.995648             0.258230             0.400636   \n",
+       "...                     ...                  ...                  ...   \n",
+       "135496            -0.629077            -1.500179             1.964434   \n",
+       "135497             2.411307             0.443325             2.485700   \n",
+       "135498             0.923460             0.906065             0.400636   \n",
+       "135499            -1.038774            -0.667249            -0.641897   \n",
+       "135500            -1.038774            -0.019414             0.921902   \n",
+       "\n",
+       "        num_pipeline__x  num_pipeline__y  num_pipeline__z  cat_pipeline__cut  \\\n",
+       "0             -0.780451        -0.835103        -0.876024           0.874100   \n",
+       "1              1.073226         1.166389         0.946633          -1.137644   \n",
+       "2              1.703116         1.755063         1.742237          -0.131772   \n",
+       "3             -1.122391        -1.161138        -1.165334           0.874100   \n",
+       "4             -1.176382        -1.152082        -1.136403          -1.137644   \n",
+       "...                 ...              ...              ...                ...   \n",
+       "135496        -0.546492        -0.518125        -0.644575          -1.137644   \n",
+       "135497         1.919078         1.872797         1.930288          -1.137644   \n",
+       "135498         0.992240         0.921862         1.047891          -0.131772   \n",
+       "135499        -1.212375        -1.197364        -1.252127          -1.137644   \n",
+       "135500        -1.239371        -1.215477        -1.208731          -1.137644   \n",
+       "\n",
+       "        cat_pipeline__color  cat_pipeline__clarity  \n",
+       "0                 -0.936747               1.350746  \n",
+       "1                  0.910853               0.684455  \n",
+       "2                  0.910853               0.018164  \n",
+       "3                 -0.320880               2.017037  \n",
+       "4                  1.526720              -0.648127  \n",
+       "...                     ...                    ...  \n",
+       "135496            -0.936747              -0.648127  \n",
+       "135497            -0.320880              -0.648127  \n",
+       "135498             0.294987               0.018164  \n",
+       "135499             0.294987               2.017037  \n",
+       "135500             0.294987              -1.314417  \n",
+       "\n",
+       "[135501 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Training Model\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "regression=LinearRegression()\n",
+    "regression.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 6432.97591819,  -132.34206204,   -70.48787525, -1701.38593925,\n",
+       "         -494.17005097,   -76.32351645,    68.80035873,  -464.67990411,\n",
+       "          652.10059539]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regression.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3976.8787389])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regression.intercept_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
