Exception and logging

--- a/notebooks/Model Training.ipynb
+++ b/notebooks/Model Training.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4   1.70    Premium     G     VS2   62.6   59.0  7.65  7.61  4.77  14453"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "[135501 rows x 9 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "          652.10059539]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
        "array([3976.8787389])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,10 +571,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Modelling the data using different algorithms\n",
+    "from sklearn.linear_model import LinearRegression,Ridge,Lasso,ElasticNet\n",
+    "from sklearn.metrics import r2_score,mean_absolute_error,mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code to automate the evaluation process of each model\n",
+    "import numpy as np \n",
+    "def evaluate_model(true,predicted):\n",
+    "    mse=mean_squared_error(true,predicted)\n",
+    "    mae=mean_absolute_error(true,predicted)\n",
+    "    rmse=np.sqrt(mean_squared_error(true,predicted))\n",
+    "    r2_square=r2_score(true,predicted)\n",
+    "    return mse,mae,rmse,r2_square\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linear_regression\n",
+      "RMSE 1014.6296630375463\n",
+      "MAE 675.0758270067483\n",
+      "R2_Score 93.62906819996049\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "ridge\n",
+      "RMSE 1014.634323353441\n",
+      "MAE 675.1077629781341\n",
+      "R2_Score 93.62900967491632\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "lasso\n",
+      "RMSE 1014.659130275064\n",
+      "MAE 676.2421173665509\n",
+      "R2_Score 93.62869814082755\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "elasticnet\n",
+      "RMSE 1533.3541245902313\n",
+      "MAE 1060.9432977143008\n",
+      "R2_Score 85.44967219374031\n",
+      "===================================\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "models={\n",
+    "    \"linear_regression\":LinearRegression(),\n",
+    "    \"ridge\":Ridge(),\n",
+    "    \"lasso\":Lasso(),\n",
+    "    \"elasticnet\":ElasticNet()\n",
+    "    }\n",
+    "model_list=[]\n",
+    "r2_list=[]\n",
+    "for i in range(len(list(models))):\n",
+    "    model=list(models.values())[i]\n",
+    "    model.fit(X_train,y_train)\n",
+    "    \n",
+    "# Making predictions using the model \n",
+    "    y_pred=model.predict(X_test)\n",
+    "\n",
+    "# Calulating errors and model accuracy\n",
+    "    mse,mae,rmse,r2_square=evaluate_model(y_test,y_pred)\n",
+    "    print(list(models.keys())[i])\n",
+    "    model_list.append(list(models.keys())[i])\n",
+    "    print(\"RMSE\",rmse)\n",
+    "    print(\"MAE\",mae)\n",
+    "    print(\"R2_Score\",r2_square*100)\n",
+    "    r2_list.append(r2_square*100)\n",
+    "    print(\"=\"*35)\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['linear_regression', 'ridge', 'lasso', 'elasticnet']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[93.62906819996049, 93.62900967491632, 93.62869814082755, 85.44967219374031]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_list"
+   ]
   }
  ],
  "metadata": {
